# OpenFPGA

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  README_Benchmarks.md  VERSION.md  ci_test.sh  deploy_key.enc  getting_started.md  jupyter_example.ipynb  msys2_requirements.txt  openfpga.sh  requirements.txt  run_local.bat  run_local.sh  run_test.sh  vcpkg.json
ace2/: CMakeLists.txt  Makefile  ace.c
ace2/SRC/: ace.c  bdd.c  cycle.c  io_ace.c  sim.c
libopenfpga/: CMakeLists.txt
libopenfpga/libarchopenfpga/: CMakeLists.txt
libopenfpga/libarchopenfpga/arch/: sample_arch.xml  sample_simulation_setting.xml
libopenfpga/libarchopenfpga/src/: arch_direct.cpp  arch_direct.h  arch_direct_fwd.h  bitstream_setting.cpp  bitstream_setting.h  bitstream_setting_fwd.h  check_circuit_library.cpp  check_circuit_library.h  circuit_library.cpp  circuit_library.h  circuit_settings.h  circuit_types.h  config_protocol.cpp  config_protocol.h  direct_types.h  openfpga_arch.h  openfpga_arch_linker.cpp  openfpga_arch_linker.h  pb_annotation.h  pb_type_annotation.cpp  pb_type_annotation.h  port_parser.h  read_openfpga_xml.cpp  read_openfpga_xml.h  read_xml_bitstream_setting.cpp  read_xml_bitstream_setting.h  read_xml_circuit_library.cpp  read_xml_circuit_library.h  read_xml_circuit_settings.cpp  read_xml_circuit_settings.h  read_xml_config_protocol.cpp  read_xml_config_protocol.h  read_xml_openfpga_arch.cpp  read_xml_openfpga_arch.h  read_xml_pb_type_annotation.cpp  read_xml_pb_type_annotation.h  read_xml_routing_circuit.cpp  read_xml_routing_circuit.h  read_xml_simulation_setting.cpp  read_xml_simulation_setting.h  (+29 more)
libopenfpga/libarchopenfpga/test/: main.cpp  read_arch_openfpga.cpp  read_bitstream_setting_openfpga.cpp
libopenfpga/libbusgroup/: CMakeLists.txt
libopenfpga/libbusgroup/example/: bus_group_example.xml
libopenfpga/libbusgroup/src/: bus_group.cpp  bus_group.h  (+6 more)
libopenfpga/libfabrickey/: CMakeLists.txt
libopenfpga/libfpgaaesencryption/: CMakeLists.txt
libopenfpga/libfpgabitstream/: CMakeLists.txt
libopenfpga/libminishell/: CMakeLists.txt
libopenfpga/libopenfpgashell/: CMakeLists.txt
libopenfpga/libopenfpgatileablerrgraph/: CMakeLists.txt
libopenfpga/libopenfpgautil/: CMakeLists.txt
libopenfpga/libpcf/: CMakeLists.txt
libopenfpga/libpinconstrain/: CMakeLists.txt
libopenfpga/librepackdc/: CMakeLists.txt
libs/: CMakeLists.txt
libs/libarchopenfpga/: CMakeLists.txt
libs/libbusgroup/: CMakeLists.txt
libs/libclkarchopenfpga/: CMakeLists.txt
libs/libfabrickey/: CMakeLists.txt
libs/libfpgabitstream/: CMakeLists.txt
libs/libini/: CMakeLists.txt
libs/libionamemap/: CMakeLists.txt
libs/libmif/: CMakeLists.txt  test_bitstream_mif_setting_out.xml
libs/libnamemanager/: CMakeLists.txt
libs/libopenfpgacapnproto/: CMakeLists.txt  README.md  mmap_file.cpp  mmap_file.h  serdes_utils.cpp  serdes_utils.h
libs/libopenfpgashell/: CMakeLists.txt
libs/libopenfpgautil/: CMakeLists.txt
libs/libpcf/: CMakeLists.txt
libs/librrgraph/: CMakeLists.txt
libs/libtileconfig/: CMakeLists.txt
libs/libvtrutil/: CMakeLists.txt
openfpga/: CMakeLists.txt  openfpga_pkg.tcl  pkgIndex.tcl  readline.tcl
openfpga/src/: ctag_src.sh  main.cpp  openfpga.i  openfpga_shell.i
openfpga/test_blif/: and.v  and_latch.act  and_latch.blif
openfpga/test_openfpga_arch/: k6_N10_40nm_openfpga.xml  k6_frac_N10_40nm_openfpga.xml  k6_frac_N10_adder_chain_40nm_openfpga.xml  k6_frac_N10_adder_chain_mem16K_40nm_openfpga.xml  k6_frac_N10_adder_chain_mem16K_aib_40nm_openfpga.xml  k6_frac_N10_adder_column_chain_40nm_openfpga.xml  k6_frac_N10_adder_register_chain_40nm_openfpga.xml  k6_frac_N10_adder_register_scan_chain_40nm_openfpga.xml  k6_frac_N10_spyio_40nm_openfpga.xml  k6_frac_N10_stdcell_mux_40nm_openfpga.xml  k6_frac_N10_tree_mux_40nm_openfpga.xml
openfpga/test_script/: and_k6_frac.openfpga  and_k6_frac_adder_chain.openfpga  and_k6_frac_adder_chain_mem16K.openfpga  and_k6_frac_tileable.openfpga  and_k6_frac_tileable_adder_chain.openfpga  and_k6_frac_tileable_adder_chain_mem16K.openfpga  and_k6_frac_tileable_adder_chain_mem16K_aib.openfpga  and_k6_frac_tileable_adder_chain_mem16K_multi_io_capacity.openfpga  and_k6_frac_tileable_adder_chain_mem16K_reduced_io.openfpga  and_k6_frac_tileable_adder_chain_wide_mem16K.openfpga  and_k6_frac_tileable_adder_column_chain.openfpga  and_k6_frac_tileable_adder_register_scan_chain.openfpga  and_k6_frac_tileable_spyio.openfpga  and_k6_frac_tileable_stdcell_mux2.openfpga  and_k6_frac_tileable_thru_channel_adder_chain_mem16K.openfpga  and_k6_frac_tileable_tree_mux.openfpga  and_latch_k6_frac.openfpga  and_latch_k6_frac_tileable.openfpga  and_latch_k6_frac_tileable_adder_chain.openfpga  and_latch_k6_frac_tileable_adder_chain_mem16K.openfpga  riscv_core.openfpga  s298.openfpga  s298_k6_frac.openfpga
openfpga/test_vpr_arch/: k6_N10_40nm.xml  k6_N10_tileable_40nm.xml  k6_frac_N10_40nm.xml  k6_frac_N10_adder_chain_40nm.xml  k6_frac_N10_adder_chain_mem16K_40nm.xml  k6_frac_N10_frac_chain_depop50_mem32K_40nm.xml  k6_frac_N10_tileable_40nm.xml  k6_frac_N10_tileable_adder_chain_40nm.xml  k6_frac_N10_tileable_adder_chain_mem16K_40nm.xml  k6_frac_N10_tileable_adder_chain_mem16K_aib_40nm.xml  k6_frac_N10_tileable_adder_chain_mem16K_multi_io_capacity_40nm.xml  k6_frac_N10_tileable_adder_chain_mem16K_reduced_io_40nm.xml  k6_frac_N10_tileable_adder_chain_wide_mem16K_40nm.xml  k6_frac_N10_tileable_adder_register_chain_40nm.xml  k6_frac_N10_tileable_adder_register_scan_chain_40nm.xml
vpr7_x2p/libarchfpga/: CMakeLists.txt  Makefile  read_xml_arch_file.c  read_xml_spice.c  read_xml_spice_util.c  tags
vpr7_x2p/libarchfpgavpr7/: CMakeLists.txt
vpr7_x2p/libpcre/: CMakeLists.txt  Makefile
vpr7_x2p/libprinthandler/: CMakeLists.txt  Makefile
vpr7_x2p/vpr/: .regression_verilog.sh  CMakeLists.txt  Makefile  arch.xml  go.sh  go_fpga_spice.sh  go_fpga_verilog.sh  go_ganesh.sh  picorv.sh  picorv_ace.act  picorv_ace.blif  regression_verilog.sh
yosys/: CMakeLists.txt  Makefile
(+5558 files in other folders)
